tests/syntax_error/funcptr_junk_after_arg.jou
def foo(x: funcptr(int junk) -> int) -> None:  # Error: expected a ')', got a variable name 'junk'
    pass
